--- a/7/14.ipynb
+++ b/7/14.ipynb
@@ -18,6 +18,7 @@
       "source": [
         "using Printf\n",
         "using Dates\n",
+        "# ° Alt-0176 - https://jkorpela.fi/nappis.html\n",
         "b=2.897768e-3 # Wienin siirtymälain vakio\n",
         "c=2.99792e8 # Valon nopeus\n",
         "h=6.6260693e-34 # Plancin vakio\n",
@@ -31,7 +32,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-11-15T18:34:40.52\n",
+            "2021-12-04T14:42:36.052\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -47,7 +48,7 @@
           ]
         }
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -60,18 +61,51 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-15T16:34:40.541Z",
-          "iopub.execute_input": "2021-11-15T16:34:40.551Z",
-          "iopub.status.idle": "2021-11-15T16:34:40.573Z"
+          "iopub.status.busy": "2021-12-04T12:42:35.089Z",
+          "iopub.execute_input": "2021-12-04T12:42:35.960Z",
+          "iopub.status.idle": "2021-12-04T12:42:37.878Z"
         }
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2-5 \n",
+        "14-3\n",
         "\n",
-        "Kirjan vastaus: 5-09 eV, Nikkeli"
+        "Kirjan vastaus: 20 MHz"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "14-4\n",
+        "\n",
+        "Kirjan vastaus: <br>\n",
+        "a) $\\substack{2 \\\\ 1}d \\substack{14 \\\\ 7}N \\rightarrow \\substack{15 \\\\ 8}O + \\substack{1 \\\\ 0}n$<br>\n",
+        "b) $\\substack{15 \\\\ 8}O \\rightarrow \\substack{15 \\\\ 7}N + \\substack{\\hspace{0.8em}0 \\\\ +1}e + v$<br>\n",
+        "<br>"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "14-5\n",
+        "\n",
+        "Kirjan vastaus: "
       ],
       "metadata": {
         "nteract": {
