--- a/7/14.ipynb
+++ b/7/14.ipynb
@@ -83,12 +83,48 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# E = hf\n",
+        "E=1e-7eV\n",
+        "f=E/h"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 3,
+          "data": {
+            "text/plain": "2.4179895009549625e7"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 3,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-04T13:35:51.376Z",
+          "iopub.execute_input": "2021-12-04T13:35:51.383Z",
+          "iopub.status.idle": "2021-12-04T13:35:51.401Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "14-4\n",
         "\n",
         "Kirjan vastaus: <br>\n",
-        "a) $\\substack{2 \\\\ 1}d \\substack{14 \\\\ 7}N \\rightarrow \\substack{15 \\\\ 8}O + \\substack{1 \\\\ 0}n$<br>\n",
+        "a) $\\substack{2 \\\\ 1}d + \\substack{14 \\\\ 7}N \\rightarrow \\substack{15 \\\\ 8}O + \\substack{1 \\\\ 0}n$<br>\n",
         "b) $\\substack{15 \\\\ 8}O \\rightarrow \\substack{15 \\\\ 7}N + \\substack{\\hspace{0.8em}0 \\\\ +1}e + v$<br>\n",
         "<br>"
       ],
@@ -105,13 +141,53 @@
       "source": [
         "14-5\n",
         "\n",
-        "Kirjan vastaus: "
+        "Kirjan vastaus: <br>a) $\\substack{18 \\\\ 9}F \\rightarrow \\substack{18 \\\\ 8}O + \\substack{\\hspace{8pt}0 \\\\ +1}e + v$<br>\n",
+        "b) 330 MBq"
       ],
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T12=109.77#min\n",
+        "l=log(2)/T12\n",
+        "t=45#min\n",
+        "# N=N0*exp(-l*t)\n",
+        "N=250 # MBq\n",
+        "N0=N/exp(-l*t)"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 4,
+          "data": {
+            "text/plain": "332.15949793053363"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 4,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-04T13:41:23.515Z",
+          "iopub.execute_input": "2021-12-04T13:41:23.524Z",
+          "iopub.status.idle": "2021-12-04T13:41:23.543Z"
         }
       }
     }
