--- a/7/15.ipynb
+++ b/7/15.ipynb
@@ -16,38 +16,14 @@
     {
       "cell_type": "code",
       "source": [
-        "using Printf\n",
-        "using Dates\n",
-        "b=2.897768e-3 # Wienin siirtymälain vakio\n",
-        "c=2.99792e8 # Valon nopeus\n",
-        "h=6.6260693e-34 # Plancin vakio\n",
-        "eV=1.6021766e-19 # Elektorinivoltti\n",
-        "sigma=5.670374419e-8 # Stefan-Boltzman\n",
-        "@printf \"%s\\n\" Dates.now();\n",
-        "versioninfo(verbose=false);"
+        "b<-2.897768e-3 # Wienin siirtymälain vakio\n",
+        "c<-2.99792e8 # Valon nopeus\n",
+        "h<-6.6260693e-34 # Plancin vakio\n",
+        "eV<-1.6021766e-19 # Elektorinivoltti\n",
+        "sigma<-5.670374419e-8 # Stefan-Boltzman"
       ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2021-11-15T18:34:40.52\n",
-            "Julia Version 1.5.4\n",
-            "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
-            "Platform Info:\n",
-            "  OS: Windows (x86_64-w64-mingw32)\n",
-            "  CPU: Intel(R) Core(TM) i7-8650U CPU @ 1.90GHz\n",
-            "  WORD_SIZE: 64\n",
-            "  LIBM: libopenlibm\n",
-            "  LLVM: libLLVM-9.0.1 (ORCJIT, skylake)\n",
-            "Environment:\n",
-            "  JULIA_DEPOT_PATH = C:\\Users\\snikula\\.julia;C:\\Users\\snikula\\AppData\\Local\\JuliaPro-1.5.4-1\\Julia-1.5.4\\local\\share\\julia;C:\\Users\\snikula\\AppData\\Local\\JuliaPro-1.5.4-1\\Julia-1.5.4\\share\\julia\n",
-            "  JULIA_LOAD_PATH = C:\\Users\\snikula\\.julia\\environments\\JuliaPro_v1.5.4-1;@;@v#.#;@stdlib\n",
-            "  JULIA_PKG_SERVER = pkg.juliahub.com\n"
-          ]
-        }
-      ],
-      "execution_count": 37,
+      "outputs": [],
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -60,9 +36,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-15T16:34:40.541Z",
-          "iopub.execute_input": "2021-11-15T16:34:40.551Z",
-          "iopub.status.idle": "2021-11-15T16:34:40.573Z"
+          "iopub.status.busy": "2021-12-04T20:51:26.438Z",
+          "iopub.execute_input": "2021-12-04T20:51:26.446Z",
+          "iopub.status.idle": "2021-12-04T20:51:26.517Z",
+          "shell.execute_reply": "2021-12-04T20:51:26.500Z"
         }
       }
     },
@@ -80,6 +57,50 @@
           }
         }
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "outputs": [],
+      "execution_count": 3,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-04T20:52:40.099Z",
+          "iopub.execute_input": "2021-12-04T20:52:40.106Z",
+          "iopub.status.idle": "2021-12-04T20:52:40.121Z",
+          "shell.execute_reply": "2021-12-04T20:52:40.135Z"
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
     }
   ],
   "metadata": {
@@ -87,10 +108,12 @@
       "name": "julia-nteract-1.5"
     },
     "language_info": {
-      "file_extension": ".jl",
-      "name": "julia",
-      "mimetype": "application/julia",
-      "version": "1.5.4"
+      "name": "R",
+      "codemirror_mode": "r",
+      "pygments_lexer": "r",
+      "mimetype": "text/x-r-source",
+      "file_extension": ".r",
+      "version": "4.1.2"
     },
     "kernelspec": {
       "argv": [
